# unclog

./: .gitignore  LICENSE  README.md  SPEC.md  demo.tape  pyproject.toml  screenshot.tape
.github/workflows/: release.yml
media/: demo.tape  screenshot.tape
src/unclog/: __init__.py  __main__.py  app.py  cli.py  state.py
src/unclog/apply/: __init__.py  primitives.py  restore.py  runner.py  snapshot.py
src/unclog/findings/: __init__.py  base.py  claude_md_context.py  curate.py  thresholds.py
src/unclog/findings/detectors/: __init__.py  claude_md_dead_ref.py  claude_md_duplicate.py  claude_md_oversized.py  dead_mcp.py  disabled_plugin_residue.py  failed_mcp_probe.py  heavy_hook.py  missing_claudeignore.py  scope_mismatch.py  stale_plugin.py  unused_agent.py  unused_command.py  unused_mcp.py  unused_skill.py
src/unclog/scan/: claude_md.py  config.py  filesystem.py  mcp_probe.py  project.py  session.py  stats.py  tokens.py
src/unclog/ui/: chrome.py  countdown.py  display.py  hero.py  interactive.py  output.py  picker.py  share.py  spinner.py  theme.py  welcome.py  wordmark.py
src/unclog/util/: markdown.py  paths.py
tests/: test_app_scan.py  test_apply_primitives.py  test_apply_restore.py  test_apply_snapshot.py  test_cli_restore.py  test_cli_smoke.py  test_findings_base.py  test_findings_claude_md.py  test_findings_curate.py  test_findings_detectors.py  test_findings_thresholds.py  test_paths.py  test_scan_claude_md.py  test_scan_config.py  test_scan_filesystem.py  test_scan_mcp_probe.py  test_scan_project.py  test_scan_session.py  test_scan_stats.py  test_scan_tokens.py  test_ui_countdown.py  test_ui_display.py  test_ui_hero.py  test_ui_interactive.py  test_ui_output.py  test_ui_picker.py  test_ui_share.py  test_ui_spinner.py  test_ui_theme.py  test_ui_welcome.py  test_util_markdown.py
